objects/ABBSTS_OpportunitySharingConfiguration__c.object
<CustomObject>
    <description>Implemented as business requirement #5808 and #5812. Object is used in China Opportunity Mitigation Plan Enhancement. Based on this object it is decided which opportunities are shared to which users from this object.</description>
    <fields>
        <fullName>ABBSTS_AccountEndUser_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Implemented as business requirement #5812</description>
        <inlineHelpText>Select Account to which User is Key Account Manager</inlineHelpText>
        <label>Account - End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Sharing Configurations</relationshipLabel>
        <relationshipName>Opportunity_Sharing_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ABBSTS_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Implemented as business requirement #5808 and #5812</description>
        <inlineHelpText>Check if sharing rule should be active</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABBSTS_JobRole__c</fullName>
        <description>Implemented as business requirement #5808 and #5812</description>
        <inlineHelpText>Name of Job Role to which current configuration belongs</inlineHelpText>
        <label>Job Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABBSTS_ProductGroup_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Implemented as business requirement #5808</description>
        <inlineHelpText>Select relevant Product Group for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Product Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) AND (4 OR 5)</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Product_Group__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Product Group</value>
            </filterItems>
            <filterItems>
                <field>Product_Group__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product_Group__c.Non_Searchable__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Product_Group__c.Business_Unit__c</field>
                <operation>equals</operation>
                <value>RMDR</value>
            </filterItems>
            <filterItems>
                <field>Product_Group__c.Business_Unit__c</field>
                <operation>equals</operation>
                <value>RMMG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Opportunity Sharing Configurations</relationshipLabel>
        <relationshipName>Opportunity_Sharing_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ABBSTS_RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABBSTS_ServiceCategory__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <inlineHelpText>Select all relevant Service Categories for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Service Category</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Service Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation and Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spares and Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support and Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering and Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensions, Upgrades and Retrofits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Service</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ABBSTS_State__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <inlineHelpText>Select all relevant States for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chongqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gansu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangdong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guizhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hainan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heilongjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jilin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liaoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neimenggu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qinghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shaanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shandong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sichuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tianjin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xinjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xizang</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ABBSTS_User_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Implemented as business requirement #5808 and #5812</description>
        <inlineHelpText>Select User to which opportunity should be shared</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Sharing_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Application_BU__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <globalPicklist>APTS_Application_BU</globalPicklist>
        <inlineHelpText>Select all relevant Application BUs for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Application BU</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <globalPicklist>ApplicationClass</globalPicklist>
        <inlineHelpText>Select all relevant Applications for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Application</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Implemented as business requirement #5808 and #5812</description>
        <globalPicklist>Business_Unit</globalPicklist>
        <inlineHelpText>Select all relevant Business Units for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Business Unit</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <globalPicklist>Channel_Class_Level1</globalPicklist>
        <inlineHelpText>Select all relevant Channel Class Levels 1 for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Channel Class Level1</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <globalPicklist>Channel_Class_Level2</globalPicklist>
        <inlineHelpText>Select all relevant Channel Class Levels 2 for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Channel Class Level2</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <description>Implemented as business requirement #5808 and #5812</description>
        <globalPicklist>Country</globalPicklist>
        <inlineHelpText>Select relevant Country for User Configuration</inlineHelpText>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level_1__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <globalPicklist>Industry_Usage_Level_1</globalPicklist>
        <inlineHelpText>Select all relevant Industry Usage Levels 1 for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Industry Usage Level 1</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level_2__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <globalPicklist>Industry_Usage_Level_2</globalPicklist>
        <inlineHelpText>Select all relevant Industry Usage Levels 2 for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Industry Usage Level 2</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level_3__c</fullName>
        <description>Implemented as business requirement #5808</description>
        <globalPicklist>Industry_Usage_Level_3</globalPicklist>
        <inlineHelpText>Select all relevant Industry Usage Levels 3 for User Configuration or Select empty value to disregard the field from sharing logic</inlineHelpText>
        <label>Industry Usage Level 3</label>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Opportunity Sharing Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>ABBSTS_User_ref__c</columns>
        <columns>ABBSTS_State__c</columns>
        <columns>Industry_Usage_Level_1__c</columns>
        <columns>Industry_Usage_Level_2__c</columns>
        <columns>Industry_Usage_Level_3__c</columns>
        <columns>Application__c</columns>
        <columns>ABBSTS_ProductGroup_ref__c</columns>
        <columns>ABBSTS_AccountEndUser_ref__c</columns>
        <columns>Channel_Class_Level1__c</columns>
        <columns>Channel_Class_Level2__c</columns>
        <columns>ABBSTS_ServiceCategory__c</columns>
        <columns>ABBSTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllKeyAccountManagerRecordType</fullName>
        <columns>NAME</columns>
        <columns>ABBSTS_User_ref__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Country__c</columns>
        <columns>ABBSTS_AccountEndUser_ref__c</columns>
        <columns>ABBSTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Key Account Manager Record Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpportunitySharingRecordType</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>ABBSTS_User_ref__c</columns>
        <columns>ABBSTS_State__c</columns>
        <columns>Industry_Usage_Level_1__c</columns>
        <columns>Industry_Usage_Level_2__c</columns>
        <columns>Industry_Usage_Level_3__c</columns>
        <columns>Application__c</columns>
        <columns>ABBSTS_ProductGroup_ref__c</columns>
        <columns>Channel_Class_Level1__c</columns>
        <columns>Channel_Class_Level2__c</columns>
        <columns>ABBSTS_ServiceCategory__c</columns>
        <columns>ABBSTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunity Sharing Record Type</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OSC-{00000}</displayFormat>
        <label>Opportunity Sharing Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Sharing Configurations</pluralLabel>
    <recordTypes>
        <fullName>ABBSTS_OppShareConfKeyAccountManagerRecordType</fullName>
        <active>true</active>
        <label>Key Account Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>ABBSTS_OppShareConfOpportunitySharingRecordType</fullName>
        <active>true</active>
        <label>Opportunity Sharing</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ABBSTS_AllOptionalFieldsShouldNotBeBlank</fullName>
        <active>true</active>
        <description>Validation rule used to prevent of saving Opportunity Sharing Configuration record when all optional fields are empty for Opportunity Sharing record type.</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c) 
,ABBSTS_RecordTypeName__c = &apos;Opportunity Sharing&apos; 
,ISBLANK( Application__c  )
,ISBLANK( APTS_Application_BU__c  )
,ISBLANK( Channel_Class_Level1__c  )
,ISBLANK( Channel_Class_Level2__c  )
,ISBLANK(  Industry_Usage_Level_1__c  )
,ISBLANK(  Industry_Usage_Level_2__c  )
,ISBLANK(  Industry_Usage_Level_3__c  )
,ISBLANK( ABBSTS_ProductGroup_ref__c  )
,ISBLANK( ABBSTS_State__c  )
,ISBLANK( ABBSTS_ServiceCategory__c  )
)</errorConditionFormula>
        <errorMessage>No Sharing Configuration was selected. Please select at least one configuration field.</errorMessage>
    </validationRules>
</CustomObject>